--- a/ML/Gaussian_Naive_Bayes.ipynb
+++ b/ML/Gaussian_Naive_Bayes.ipynb
@@ -657,7 +657,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7547925005266484"
+       "0.7488940383400042"
       ]
      },
      "execution_count": 17,
@@ -710,64 +710,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3439</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>153.0</td>\n",
+       "      <th>16352</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>98.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15813</th>\n",
+       "      <th>11344</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>98.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12417</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3236</th>\n",
        "      <td>2008</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>88.0</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>136.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8885</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>145.0</td>\n",
+       "      <th>6986</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>129.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16587</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>76.0</td>\n",
+       "      <th>8375</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>87.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14037</th>\n",
+       "      <th>6126</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2505</th>\n",
        "      <td>2013</td>\n",
-       "      <td>5.3</td>\n",
+       "      <td>6.1</td>\n",
        "      <td>105.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>116.0</td>\n",
+       "      <th>9119</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>115.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5721</th>\n",
-       "      <td>2003</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>180.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5933</th>\n",
-       "      <td>1968</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>157.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10012</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>120.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14196</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>108.0</td>\n",
+       "      <th>13184</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>90.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -775,16 +775,16 @@
       ],
       "text/plain": [
        "       Year  IMDb  Runtime\n",
-       "3439   2016   5.9    153.0\n",
-       "15813  2008   3.2     88.0\n",
-       "8885   2019   6.3    145.0\n",
-       "16587  2004   5.6     76.0\n",
-       "14037  2013   5.3    105.0\n",
-       "192    2017   7.6    116.0\n",
-       "5721   2003   7.7    180.0\n",
-       "5933   1968   8.1    157.0\n",
-       "10012  1979   7.5    120.0\n",
-       "14196  2018   6.5    108.0"
+       "16352  2006   5.4     98.0\n",
+       "11344  2005   5.1     98.0\n",
+       "12417  2009   6.9     94.0\n",
+       "3236   2008   5.8    136.0\n",
+       "6986   2010   6.5    129.0\n",
+       "8375   2012   4.6     87.0\n",
+       "6126   1993   6.2     94.0\n",
+       "2505   2013   6.1    105.0\n",
+       "9119   1999   4.9    115.0\n",
+       "13184  2007   4.6     90.0"
       ]
      },
      "execution_count": 18,
@@ -805,16 +805,16 @@
     {
      "data": {
       "text/plain": [
-       "3439     1\n",
-       "15813    0\n",
-       "8885     0\n",
-       "16587    0\n",
-       "14037    0\n",
-       "192      1\n",
-       "5721     0\n",
-       "5933     0\n",
-       "10012    0\n",
-       "14196    0\n",
+       "16352    0\n",
+       "11344    0\n",
+       "12417    0\n",
+       "3236     1\n",
+       "6986     0\n",
+       "8375     0\n",
+       "6126     0\n",
+       "2505     1\n",
+       "9119     0\n",
+       "13184    0\n",
        "Name: Netflix, dtype: int64"
       ]
      },
@@ -836,7 +836,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1, 0, 0, 1, 1, 0, 0, 1], dtype=int64)"
+       "array([0, 0, 0, 1, 1, 0, 0, 0, 0, 0], dtype=int64)"
       ]
      },
      "execution_count": 20,
@@ -857,16 +857,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[3.79409594e-01, 6.20590406e-01],\n",
-       "       [9.13582617e-01, 8.64173835e-02],\n",
-       "       [3.86739341e-01, 6.13260659e-01],\n",
-       "       [7.50838415e-01, 2.49161585e-01],\n",
-       "       [5.86623190e-01, 4.13376810e-01],\n",
-       "       [4.34719459e-01, 5.65280541e-01],\n",
-       "       [4.30337143e-01, 5.69662857e-01],\n",
-       "       [9.99965082e-01, 3.49176859e-05],\n",
-       "       [9.97940168e-01, 2.05983194e-03],\n",
-       "       [4.72280550e-01, 5.27719450e-01]])"
+       "array([[0.70757263, 0.29242737],\n",
+       "       [0.76247252, 0.23752748],\n",
+       "       [0.54955402, 0.45044598],\n",
+       "       [0.45794068, 0.54205932],\n",
+       "       [0.41020708, 0.58979292],\n",
+       "       [0.72948739, 0.27051261],\n",
+       "       [0.95586766, 0.04413234],\n",
+       "       [0.50255478, 0.49744522],\n",
+       "       [0.88298119, 0.11701881],\n",
+       "       [0.7919697 , 0.2080303 ]])"
       ]
      },
      "execution_count": 21,
@@ -1099,11 +1099,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Agewise Netflix Movie Share"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class='tableauPlaceholder' id='viz1622157941066' style='position: relative'><noscript><a href='#'><img alt='Agewise Netflix Movie Share ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;AgewiseNetflixMovieShare&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='AgewiseNetflixMovieShare&#47;AgewiseNetflixMovieShare' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;AgewiseNetflixMovieShare&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1622157941066');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<div class='tableauPlaceholder' id='viz1622157941066' style='position: relative'><noscript><a href='#'><img alt='Agewise Netflix Movie Share ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;AgewiseNetflixMovieShare&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='AgewiseNetflixMovieShare&#47;AgewiseNetflixMovieShare' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;AgewiseNetflixMovieShare&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1622157941066');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Netflix Movie Count vs IMDb Rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class='tableauPlaceholder' id='viz1622165527868' style='position: relative'><noscript><a href='#'><img alt='Netflix Movie Count vs IMDb Rating ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;NetflixMovieCountvsIMDbRating&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='AgewiseNetflixMovieShare&#47;NetflixMovieCountvsIMDbRating' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;NetflixMovieCountvsIMDbRating&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1622165527868');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<div class='tableauPlaceholder' id='viz1622165527868' style='position: relative'><noscript><a href='#'><img alt='Netflix Movie Count vs IMDb Rating ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;NetflixMovieCountvsIMDbRating&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='AgewiseNetflixMovieShare&#47;NetflixMovieCountvsIMDbRating' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ag&#47;AgewiseNetflixMovieShare&#47;NetflixMovieCountvsIMDbRating&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1622165527868');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>"
+   ]
   }
  ],
  "metadata": {
