--- a/ML/RandomForrestClassifier.ipynb
+++ b/ML/RandomForrestClassifier.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore', FutureWarning)"
    ]
   },
   {
@@ -898,7 +900,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6140808344198174"
+       "0.6336375488917861"
       ]
      },
      "execution_count": 15,
@@ -921,10 +923,10 @@
     {
      "data": {
       "text/plain": [
-       "[(0.5212594814555525, 'Runtime'),\n",
-       " (0.32370160928260816, 'Year'),\n",
-       " (0.12673462688734882, 'Genre'),\n",
-       " (0.028304282374490602, 'Country')]"
+       "[(0.5165286951495095, 'Runtime'),\n",
+       " (0.33679448235361703, 'Year'),\n",
+       " (0.11990681288676548, 'Genre'),\n",
+       " (0.02677000961010803, 'Country')]"
       ]
      },
      "execution_count": 16,
@@ -944,14 +946,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[1],\n",
+       "array([[0],\n",
        "       [1],\n",
-       "       [1],\n",
-       "       [0],\n",
        "       [1],\n",
        "       [1],\n",
        "       [0],\n",
        "       [1],\n",
+       "       [1],\n",
+       "       [0],\n",
        "       [1],\n",
        "       [1]])"
       ]
@@ -973,7 +975,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 1, 1, 1, 1, 1, 1])"
+       "array([0, 1, 1, 1, 1, 1, 1, 1, 0, 1])"
       ]
      },
      "execution_count": 18,
