--- a/ML/Gaussian_Naive_Bayes.ipynb
+++ b/ML/Gaussian_Naive_Bayes.ipynb
@@ -220,7 +220,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../Resources/cleaned_data.csv\")\n",
+    "# Read the file from AWS data store\n",
+    "df = pd.read_csv(\"https://nw-bc-project3.s3.us-east-2.amazonaws.com/cleaned_data.csv\")\n",
     "df.head()"
    ]
   },
@@ -596,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split train and test data (70/30)"
+    "### Split train and test data (70/20)"
    ]
   },
   {
@@ -605,9 +606,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split train and test data (70/30)\n",
+    "# split train and test data (70/20)\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features,label,test_size=0.3)"
+    "X_train, X_test, y_train, y_test = train_test_split(features,label,test_size=0.2)"
    ]
   },
   {
@@ -657,7 +658,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7488940383400042"
+       "0.7548183254344392"
       ]
      },
      "execution_count": 17,
@@ -710,64 +711,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16352</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>98.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11344</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>98.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12417</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3236</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>136.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6986</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>129.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8375</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>87.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6126</th>\n",
-       "      <td>1993</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2505</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>105.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9119</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>115.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13184</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>4.6</td>\n",
+       "      <th>10618</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>3.4</td>\n",
        "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14689</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>106.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2401</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13211</th>\n",
+       "      <td>1944</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11891</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8409</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>98.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9477</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1965</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12740</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6623</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>97.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -775,16 +776,16 @@
       ],
       "text/plain": [
        "       Year  IMDb  Runtime\n",
-       "16352  2006   5.4     98.0\n",
-       "11344  2005   5.1     98.0\n",
-       "12417  2009   6.9     94.0\n",
-       "3236   2008   5.8    136.0\n",
-       "6986   2010   6.5    129.0\n",
-       "8375   2012   4.6     87.0\n",
-       "6126   1993   6.2     94.0\n",
-       "2505   2013   6.1    105.0\n",
-       "9119   1999   4.9    115.0\n",
-       "13184  2007   4.6     90.0"
+       "10618  2018   3.4     90.0\n",
+       "14689  2006   4.8    106.0\n",
+       "2401   2019   6.7     85.0\n",
+       "13211  1944   6.4     72.0\n",
+       "11891  2018   7.1     97.0\n",
+       "8409   2007   4.1     98.0\n",
+       "9477   2016   8.3     70.0\n",
+       "1965   2016   7.4     85.0\n",
+       "12740  1987   5.5    100.0\n",
+       "6623   2012   8.1     97.0"
       ]
      },
      "execution_count": 18,
@@ -805,16 +806,16 @@
     {
      "data": {
       "text/plain": [
-       "16352    0\n",
-       "11344    0\n",
-       "12417    0\n",
-       "3236     1\n",
-       "6986     0\n",
-       "8375     0\n",
-       "6126     0\n",
-       "2505     1\n",
-       "9119     0\n",
-       "13184    0\n",
+       "10618    0\n",
+       "14689    0\n",
+       "2401     1\n",
+       "13211    0\n",
+       "11891    0\n",
+       "8409     0\n",
+       "9477     0\n",
+       "1965     1\n",
+       "12740    0\n",
+       "6623     0\n",
        "Name: Netflix, dtype: int64"
       ]
      },
@@ -836,7 +837,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 1, 0, 0, 0, 0, 0], dtype=int64)"
+       "array([0, 0, 0, 0, 1, 0, 0, 1, 0, 0], dtype=int64)"
       ]
      },
      "execution_count": 20,
@@ -857,16 +858,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.70757263, 0.29242737],\n",
-       "       [0.76247252, 0.23752748],\n",
-       "       [0.54955402, 0.45044598],\n",
-       "       [0.45794068, 0.54205932],\n",
-       "       [0.41020708, 0.58979292],\n",
-       "       [0.72948739, 0.27051261],\n",
-       "       [0.95586766, 0.04413234],\n",
-       "       [0.50255478, 0.49744522],\n",
-       "       [0.88298119, 0.11701881],\n",
-       "       [0.7919697 , 0.2080303 ]])"
+       "array([[8.49486943e-01, 1.50513057e-01],\n",
+       "       [7.26445764e-01, 2.73554236e-01],\n",
+       "       [5.01919816e-01, 4.98080184e-01],\n",
+       "       [1.00000000e+00, 1.38953434e-12],\n",
+       "       [4.62930924e-01, 5.37069076e-01],\n",
+       "       [8.07744277e-01, 1.92255723e-01],\n",
+       "       [5.59650173e-01, 4.40349827e-01],\n",
+       "       [4.85042055e-01, 5.14957945e-01],\n",
+       "       [9.89432516e-01, 1.05674840e-02],\n",
+       "       [5.06664717e-01, 4.93335283e-01]])"
       ]
      },
      "execution_count": 21,
