Updated RFC and NN files and removed unneeded files

--- a/ML/RFC_IMDb.ipynb
+++ b/ML/RFC_IMDb.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **How to decide what to watch on Netflix?**\n",
+    "\n",
+    "New movies come out on Netflix every month, some I have never heard of. Is it possible to build a model that will tell me if a movie is worth watching based on a subset of movie parameters? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
