--- a/ML/NN_IMDb.ipynb
+++ b/ML/NN_IMDb.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **How to decide what to watch on Netflix? - Neural Network**\n",
+    "\n",
+    "New movies come out on Netflix every month, some I have never heard of. Is it possible to build a model that will tell me if a movie is worth watching based on a subset of movie parameters? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -670,7 +679,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
     "model = Sequential()\n",
-    "model.add(Dense(units=12, activation=\"relu\", input_dim=4))\n",
+    "model.add(Dense(units=10, activation=\"relu\", input_dim=4))\n",
     "model.add(Dense(units=2, activation=\"softmax\"))"
    ]
   },
@@ -944,8 +953,8 @@
    "outputs": [],
    "source": [
     "deep_model = Sequential()\n",
-    "deep_model.add(Dense(units=12, activation=\"relu\", input_dim=4))\n",
-    "deep_model.add(Dense(units=12, activation=\"relu\"))\n",
+    "deep_model.add(Dense(units=10, activation=\"relu\", input_dim=4))\n",
+    "deep_model.add(Dense(units=10, activation=\"relu\"))\n",
     "deep_model.add(Dense(units=2, activation=\"softmax\"))"
    ]
   },
@@ -981,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -997,8 +1006,208 @@
       "Epoch 4/100\n",
       "368/368 - 0s - loss: 0.4623 - accuracy: 0.7845\n",
       "Epoch 5/100\n",
-      "368/368 - 0s - loss: 0.4595 - accuracy: 0.7816\n"
+      "368/368 - 0s - loss: 0.4595 - accuracy: 0.7816\n",
+      "Epoch 6/100\n",
+      "368/368 - 0s - loss: 0.4575 - accuracy: 0.7839\n",
+      "Epoch 7/100\n",
+      "368/368 - 0s - loss: 0.4566 - accuracy: 0.7824\n",
+      "Epoch 8/100\n",
+      "368/368 - 0s - loss: 0.4555 - accuracy: 0.7835\n",
+      "Epoch 9/100\n",
+      "368/368 - 0s - loss: 0.4546 - accuracy: 0.7834\n",
+      "Epoch 10/100\n",
+      "368/368 - 0s - loss: 0.4535 - accuracy: 0.7853\n",
+      "Epoch 11/100\n",
+      "368/368 - 0s - loss: 0.4534 - accuracy: 0.7844\n",
+      "Epoch 12/100\n",
+      "368/368 - 0s - loss: 0.4529 - accuracy: 0.7839\n",
+      "Epoch 13/100\n",
+      "368/368 - 0s - loss: 0.4529 - accuracy: 0.7844\n",
+      "Epoch 14/100\n",
+      "368/368 - 0s - loss: 0.4522 - accuracy: 0.7859\n",
+      "Epoch 15/100\n",
+      "368/368 - 0s - loss: 0.4523 - accuracy: 0.7853\n",
+      "Epoch 16/100\n",
+      "368/368 - 0s - loss: 0.4516 - accuracy: 0.7846\n",
+      "Epoch 17/100\n",
+      "368/368 - 0s - loss: 0.4518 - accuracy: 0.7849\n",
+      "Epoch 18/100\n",
+      "368/368 - 0s - loss: 0.4511 - accuracy: 0.7876\n",
+      "Epoch 19/100\n",
+      "368/368 - 0s - loss: 0.4508 - accuracy: 0.7852\n",
+      "Epoch 20/100\n",
+      "368/368 - 0s - loss: 0.4508 - accuracy: 0.7846\n",
+      "Epoch 21/100\n",
+      "368/368 - 0s - loss: 0.4509 - accuracy: 0.7860\n",
+      "Epoch 22/100\n",
+      "368/368 - 0s - loss: 0.4504 - accuracy: 0.7876\n",
+      "Epoch 23/100\n",
+      "368/368 - 0s - loss: 0.4505 - accuracy: 0.7858\n",
+      "Epoch 24/100\n",
+      "368/368 - 0s - loss: 0.4502 - accuracy: 0.7871\n",
+      "Epoch 25/100\n",
+      "368/368 - 0s - loss: 0.4503 - accuracy: 0.7880\n",
+      "Epoch 26/100\n",
+      "368/368 - 0s - loss: 0.4497 - accuracy: 0.7844\n",
+      "Epoch 27/100\n",
+      "368/368 - 0s - loss: 0.4496 - accuracy: 0.7875\n",
+      "Epoch 28/100\n",
+      "368/368 - 0s - loss: 0.4499 - accuracy: 0.7846\n",
+      "Epoch 29/100\n",
+      "368/368 - 0s - loss: 0.4499 - accuracy: 0.7862\n",
+      "Epoch 30/100\n",
+      "368/368 - 0s - loss: 0.4495 - accuracy: 0.7867\n",
+      "Epoch 31/100\n",
+      "368/368 - 0s - loss: 0.4495 - accuracy: 0.7861\n",
+      "Epoch 32/100\n",
+      "368/368 - 0s - loss: 0.4495 - accuracy: 0.7857\n",
+      "Epoch 33/100\n",
+      "368/368 - 0s - loss: 0.4492 - accuracy: 0.7859\n",
+      "Epoch 34/100\n",
+      "368/368 - 0s - loss: 0.4488 - accuracy: 0.7877\n",
+      "Epoch 35/100\n",
+      "368/368 - 0s - loss: 0.4495 - accuracy: 0.7839\n",
+      "Epoch 36/100\n",
+      "368/368 - 0s - loss: 0.4492 - accuracy: 0.7861\n",
+      "Epoch 37/100\n",
+      "368/368 - 0s - loss: 0.4493 - accuracy: 0.7853\n",
+      "Epoch 38/100\n",
+      "368/368 - 0s - loss: 0.4490 - accuracy: 0.7857\n",
+      "Epoch 39/100\n",
+      "368/368 - 0s - loss: 0.4489 - accuracy: 0.7872\n",
+      "Epoch 40/100\n",
+      "368/368 - 0s - loss: 0.4488 - accuracy: 0.7853\n",
+      "Epoch 41/100\n",
+      "368/368 - 0s - loss: 0.4486 - accuracy: 0.7846\n",
+      "Epoch 42/100\n",
+      "368/368 - 0s - loss: 0.4484 - accuracy: 0.7869\n",
+      "Epoch 43/100\n",
+      "368/368 - 0s - loss: 0.4489 - accuracy: 0.7867\n",
+      "Epoch 44/100\n",
+      "368/368 - 0s - loss: 0.4478 - accuracy: 0.7858\n",
+      "Epoch 45/100\n",
+      "368/368 - 0s - loss: 0.4484 - accuracy: 0.7860\n",
+      "Epoch 46/100\n",
+      "368/368 - 0s - loss: 0.4478 - accuracy: 0.7866\n",
+      "Epoch 47/100\n",
+      "368/368 - 0s - loss: 0.4482 - accuracy: 0.7842\n",
+      "Epoch 48/100\n",
+      "368/368 - 0s - loss: 0.4480 - accuracy: 0.7879\n",
+      "Epoch 49/100\n",
+      "368/368 - 0s - loss: 0.4483 - accuracy: 0.7870\n",
+      "Epoch 50/100\n",
+      "368/368 - 0s - loss: 0.4475 - accuracy: 0.7875\n",
+      "Epoch 51/100\n",
+      "368/368 - 0s - loss: 0.4483 - accuracy: 0.7859\n",
+      "Epoch 52/100\n",
+      "368/368 - 0s - loss: 0.4484 - accuracy: 0.7840\n",
+      "Epoch 53/100\n",
+      "368/368 - 0s - loss: 0.4478 - accuracy: 0.7879\n",
+      "Epoch 54/100\n",
+      "368/368 - 0s - loss: 0.4473 - accuracy: 0.7869\n",
+      "Epoch 55/100\n",
+      "368/368 - 0s - loss: 0.4479 - accuracy: 0.7853\n",
+      "Epoch 56/100\n",
+      "368/368 - 0s - loss: 0.4475 - accuracy: 0.7864\n",
+      "Epoch 57/100\n",
+      "368/368 - 0s - loss: 0.4477 - accuracy: 0.7845\n",
+      "Epoch 58/100\n",
+      "368/368 - 0s - loss: 0.4476 - accuracy: 0.7867\n",
+      "Epoch 59/100\n",
+      "368/368 - 0s - loss: 0.4472 - accuracy: 0.7864\n",
+      "Epoch 60/100\n",
+      "368/368 - 0s - loss: 0.4472 - accuracy: 0.7866\n",
+      "Epoch 61/100\n",
+      "368/368 - 0s - loss: 0.4471 - accuracy: 0.7878\n",
+      "Epoch 62/100\n",
+      "368/368 - 0s - loss: 0.4471 - accuracy: 0.7855\n",
+      "Epoch 63/100\n",
+      "368/368 - 0s - loss: 0.4479 - accuracy: 0.7850\n",
+      "Epoch 64/100\n",
+      "368/368 - 0s - loss: 0.4472 - accuracy: 0.7881\n",
+      "Epoch 65/100\n",
+      "368/368 - 0s - loss: 0.4472 - accuracy: 0.7851\n",
+      "Epoch 66/100\n",
+      "368/368 - 0s - loss: 0.4469 - accuracy: 0.7872\n",
+      "Epoch 67/100\n",
+      "368/368 - 0s - loss: 0.4468 - accuracy: 0.7883\n",
+      "Epoch 68/100\n",
+      "368/368 - 0s - loss: 0.4473 - accuracy: 0.7856\n",
+      "Epoch 69/100\n",
+      "368/368 - 0s - loss: 0.4469 - accuracy: 0.7879\n",
+      "Epoch 70/100\n",
+      "368/368 - 0s - loss: 0.4467 - accuracy: 0.7867\n",
+      "Epoch 71/100\n",
+      "368/368 - 0s - loss: 0.4471 - accuracy: 0.7856\n",
+      "Epoch 72/100\n",
+      "368/368 - 0s - loss: 0.4464 - accuracy: 0.7867\n",
+      "Epoch 73/100\n",
+      "368/368 - 0s - loss: 0.4463 - accuracy: 0.7866\n",
+      "Epoch 74/100\n",
+      "368/368 - 0s - loss: 0.4463 - accuracy: 0.7867\n",
+      "Epoch 75/100\n",
+      "368/368 - 0s - loss: 0.4466 - accuracy: 0.7861\n",
+      "Epoch 76/100\n",
+      "368/368 - 0s - loss: 0.4464 - accuracy: 0.7875\n",
+      "Epoch 77/100\n",
+      "368/368 - 0s - loss: 0.4465 - accuracy: 0.7881\n",
+      "Epoch 78/100\n",
+      "368/368 - 0s - loss: 0.4464 - accuracy: 0.7884\n",
+      "Epoch 79/100\n",
+      "368/368 - 0s - loss: 0.4460 - accuracy: 0.7864\n",
+      "Epoch 80/100\n",
+      "368/368 - 0s - loss: 0.4468 - accuracy: 0.7871\n",
+      "Epoch 81/100\n",
+      "368/368 - 0s - loss: 0.4464 - accuracy: 0.7864\n",
+      "Epoch 82/100\n",
+      "368/368 - 0s - loss: 0.4463 - accuracy: 0.7886\n",
+      "Epoch 83/100\n",
+      "368/368 - 0s - loss: 0.4463 - accuracy: 0.7864\n",
+      "Epoch 84/100\n",
+      "368/368 - 0s - loss: 0.4459 - accuracy: 0.7870\n",
+      "Epoch 85/100\n",
+      "368/368 - 0s - loss: 0.4465 - accuracy: 0.7855\n",
+      "Epoch 86/100\n",
+      "368/368 - 0s - loss: 0.4464 - accuracy: 0.7887\n",
+      "Epoch 87/100\n",
+      "368/368 - 0s - loss: 0.4458 - accuracy: 0.7895\n",
+      "Epoch 88/100\n",
+      "368/368 - 0s - loss: 0.4464 - accuracy: 0.7846\n",
+      "Epoch 89/100\n",
+      "368/368 - 0s - loss: 0.4461 - accuracy: 0.7867\n",
+      "Epoch 90/100\n",
+      "368/368 - 0s - loss: 0.4460 - accuracy: 0.7888\n",
+      "Epoch 91/100\n",
+      "368/368 - 0s - loss: 0.4460 - accuracy: 0.7866\n",
+      "Epoch 92/100\n",
+      "368/368 - 0s - loss: 0.4467 - accuracy: 0.7863\n",
+      "Epoch 93/100\n",
+      "368/368 - 0s - loss: 0.4456 - accuracy: 0.7883\n",
+      "Epoch 94/100\n",
+      "368/368 - 0s - loss: 0.4460 - accuracy: 0.7866\n",
+      "Epoch 95/100\n",
+      "368/368 - 0s - loss: 0.4458 - accuracy: 0.7887\n",
+      "Epoch 96/100\n",
+      "368/368 - 0s - loss: 0.4456 - accuracy: 0.7864\n",
+      "Epoch 97/100\n",
+      "368/368 - 0s - loss: 0.4460 - accuracy: 0.7878\n",
+      "Epoch 98/100\n",
+      "368/368 - 0s - loss: 0.4457 - accuracy: 0.7846\n",
+      "Epoch 99/100\n",
+      "368/368 - 0s - loss: 0.4460 - accuracy: 0.7856\n",
+      "Epoch 100/100\n",
+      "368/368 - 0s - loss: 0.4457 - accuracy: 0.7872\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ffac79491c0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1011,9 +1220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123/123 - 0s - loss: 0.4586 - accuracy: 0.7822\n",
+      "Loss: 0.4585527181625366, Accuracy: 0.7821655869483948\n"
+     ]
+    }
+   ],
    "source": [
     "model_loss, model_accuracy = model.evaluate(\n",
     "    X_test_scaled, y_test_categorical, verbose=2)\n",
@@ -1022,9 +1240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123/123 - 0s - loss: 0.4550 - accuracy: 0.7837\n",
+      "Deep Neural Network - Loss: 0.45502203702926636, Accuracy: 0.7836942672729492\n"
+     ]
+    }
+   ],
    "source": [
     "model_loss, model_accuracy = deep_model.evaluate(\n",
     "    X_test_scaled, y_test_categorical, verbose=2)\n",
