updated data source

--- a/ML/NN_IMDb_80.ipynb
+++ b/ML/NN_IMDb_80.ipynb
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../Resources/cleaned_data.csv\")\n",
+    "df = pd.read_csv(\"https://nw-bc-project3.s3.us-east-2.amazonaws.com/cleaned_data.csv\")\n",
     "df.head()"
    ]
   },
